package live.mukeshtechlab.bookmyscreen.models;

public enum BookingStatus {
    CONFIRMED,
    CANCELLED,
    PENDING
}
