package live.mukeshtechlab.bookmyscreen.models;


public enum Feature {
    TWO_D,
    THREE_D,
    IMAX,
    DOLBY_ATMOS
}
