package live.mukeshtechlab.bookmyscreen.models;

public enum PaymentMode {
    CASH,
    UPI,
    DEBIT_CARD,
    CREDIT_CARD,
    NET_BANKING
}
