package live.mukeshtechlab.bookmyscreen.models;

public enum PaymentStatus {
    SUCCESS,
    FAILED,
    CANCELLED,
    PENDING,
    REFUNDED,
}
