package live.mukeshtechlab.bookmyscreen.models;

public enum ShowSeatStatus {
    AVAILABLE,
    BOOKED,
    BLOCKED,
    NOT_AVAILABLE
}
